# ruleset

./: #flr.txt#  .gitattributes  .gitignore  .gitmodules  Gemfile  LICENSE  README.md  README.rst  Ruleset.sublime-project  Ruleset.sublime-workspace  _config.yml  acorn.txt  agora-ruleset.cabal  build.gradle.kts  build.sh  common.rb  degit.rb  flr-fresh.txt  flr.erb  flr.txt  gen.py  generate_rulesets.sh  genslr.py  html.erb  index  index.html  index.md  meta  name_replacement_data  new_rule.rb  rule_index.json  settings.gradle.kts  slr  slr.erb  slr.txt  stack.yaml  style.css  test
.github/workflows/: ci.yml
_data/: nav.yml
_includes/: chats.html  nav.html
_layouts/: blog.html  default.html  posts.html  puremd.html  rulesindex.html
_site/: changelogs.html  index.html  updates.html
_site/changelogs/: 19w03.html
_site/updates/: reenactments-order.html
changelogs/: index.md
changelogs/_posts/: 2019-01-18-19w03.md  2019-02-02-19w05.md  2019-02-24-19w08.md
config/: flr_format  header  index  slr_format
full_rules/: R1006.txt  R101.txt  R1023.txt  R103.txt  R1030.txt  R104.txt  R105.txt  R1051.txt  R106.txt  R107.txt  R1367.txt  R1551.txt  R1586.txt  R1607.txt  R1681.txt  R1688.txt  R1698.txt  R1727.txt  R1728.txt  R1742.txt  R1769.txt  R1789.txt  R1950.txt  R2029.txt  R2034.txt  R208.txt  R2124.txt  R2125.txt  R2127.txt  R2137.txt  R2138.txt  R2139.txt  R2140.txt  R2141.txt  R2143.txt  R2152.txt  R2154.txt  R2160.txt  R2162.txt  R2166.txt  (+150 more)
proposals/: 1006  1023  1030  1051  1073  1278  1279  1313  1320  1334  1336  1345  1367  1391  1401  1413  1434  1437  1471  1473  1477  1480  1481  1482  1487  1511  1527  1531  1554  1564  1576  1603  1610  1635  1641  1681  1682  1699  1700  1708  (+1142 more)
regs_data/config/: flr_format  header  (+3 more)
rulekeep/: Main.hs  config.py  entity.py  history.py  templates.py  utils.py
rules/: 1006  101  1023  103  1030  104  105  1051  106  107  1367  1551  1586  1607  1650  1681  1688  1698  1727  1728  1742  1769  1789  1885  1950  1993  1994  1995  1996  1998  1999  2003  2004  2022  2029  2034  2046  208  2124  2125  (+363 more)
short_rules/: R1006.txt  R101.txt  R1023.txt  R103.txt  R1030.txt  R104.txt  R105.txt  R1051.txt  R106.txt  R107.txt  R1367.txt  R1551.txt  R1586.txt  R1607.txt  R1681.txt  R1688.txt  R1698.txt  R1727.txt  R1728.txt  R1742.txt  R1769.txt  R1789.txt  R1950.txt  R2029.txt  R2034.txt  R208.txt  R2124.txt  R2125.txt  R2127.txt  R2137.txt  R2138.txt  R2139.txt  R2140.txt  R2141.txt  R2143.txt  R2152.txt  R2154.txt  R2160.txt  R2162.txt  R2166.txt  (+150 more)
updates/: index.md
(+1616 files in other folders)
